Force scrollbar Avoid centering jump when expanding

--- a/src/styles.css
+++ b/src/styles.css
@@ -130,6 +130,10 @@ table {
 
 /* ======= APP STYLES ============ */
 
+html {
+  overflow-y: scroll;
+}
+
 .App {
   font-family: sans-serif;
   padding: 2em;
